src/types/tests/snapshots/tgbot__types__tests__reaction__delete_message_reaction-2.snap
---
source: src/types/tests/reaction.rs
expression: actual_data
---
{
  "actor_chat_id": 3,
  "chat_id": 1,
  "message_id": 2,
  "user_id": 4
}
