src/types/tests/snapshots/tgbot__types__tests__reaction__delete_message_reaction.snap
---
source: src/types/tests/reaction.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_id": 2
}
