src/types/tests/snapshots/tgbot__types__tests__reaction__reaction_count.snap
---
source: src/types/tests/reaction.rs
expression: "ReactionCount::new(ReactionType::emoji(\"🤡\"), 1)"
---
{
  "type": {
    "type": "emoji",
    "emoji": "🤡"
  },
  "total_count": 1
}
