src/types/tests/snapshots/tgbot__types__tests__reaction__reaction_type-2.snap
---
source: src/types/tests/reaction.rs
expression: "ReactionType::emoji(\"🤡\")"
---
{
  "type": "emoji",
  "emoji": "🤡"
}
