src/types/tests/snapshots/tgbot__types__tests__reaction__reaction_type.snap
---
source: src/types/tests/reaction.rs
expression: "ReactionType::custom_emoji(\"5420319826440644296\")"
---
{
  "type": "custom_emoji",
  "custom_emoji_id": "5420319826440644296"
}
