src/types/tests/snapshots/tgbot__types__tests__reaction__set_message_reaction-2.snap
---
source: src/types/tests/reaction.rs
expression: actual_data
---
{
  "chat_id": 1,
  "is_big": true,
  "message_id": 2,
  "reaction": [
    {
      "emoji": "🤡",
      "type": "emoji"
    }
  ]
}
