src/types/tests/snapshots/tgbot__types__tests__reaction__set_message_reaction.snap
---
source: src/types/tests/reaction.rs
expression: actual_data
---
{
  "chat_id": 1,
  "is_big": false,
  "message_id": 2
}
